# mdlinkscheck

./: .gitignore  README.md  generate-all.sh  process-all.sh  pyproject.toml
doc/: cmdargs.md  cmdargs.txt  generate-doc.sh  generate_small.sh
src/: checkmdlinks.py  requirements.txt  setup.py
src/mdlinkscheck/: __init__.py  __main__.py  filechecker.py  main.py
src/testmdlinkscheck/: runtests.py  test_api.py  test_filechecker.py  test_main.py
src/testmdlinkscheck/data/: __init__.py  bitbucket.md  fenced_code_block.md  github.md  images.md  invalid.md  links.md
tools/: checkall.sh  codecheck.sh  coverage.sh  doccheck.sh  installvenv.sh  mdpreproc.py  pylint3.config
