[project]
name = "mdlinkscheck"
version = "1.0.3"
description = "verify links in Markdown files"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Arkadiusz Netczuk" }
]
requires-python = ">=3.12"
dependencies = [
    "mistune >= 3.0.2",
    "validators == 0.22.0",
    "requests >= 2.31.0",
    "bs4 >= 0.0.1"
]

[project.urls]
Repository = "https://github.com/anetczuk/mdlinkscheck"

[project.optional-dependencies]
dev = [
    ### dependencies for "tools" scripts

    "xmltodict",    ## for mdpreproc.py

    "black",
    "pycodestyle",
    "flake8",
    "pylint",
    #"ruff",
    "complexipy",
    "bandit",
    "codespell",
    "shellcheck_py",
    "pydocstyle",
    "mypy",
    "types-requests",       ## for mypy
    "coverage",             ## for coverage.sh

    ## for profiling (tools/profiler.sh)
    "pyprof2calltree",   
    "snakeviz",
    "mtprof",
    "viztracer",
]

[project.scripts]
checkmdlinks = "mdlinkscheck.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mdlinkscheck*"]

#[tool.setuptools.package-data]
#myprogramexec = [
#    "ui/*.ui",
#]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"
